Changelog
=========


1.0.2 (unreleased)
------------------

- Nothing changed yet.


1.0.1 (2016-05-24)
------------------

- Prevent iframe from stopping event bubbling in IE
  [Kevin Bieri]

1.0.0 (2016-05-20)
------------------

- Initial implementation. [mbaechtold]