@@ -2,3 +2,7 @@
 extends =
     test-plone-4.3.x.cfg
     https://raw.github.com/4teamwork/ftw-buildouts/master/plone-development.cfg
+
+[instance]
+eggs += 
+    ftw.theming
