@@ -1,15 +1,11 @@
 @include portal-type-font-awesome-icon(ftw-htmlblock-htmlblock, code);
 
-.sl-can-edit .ftw-htmlblock-htmlblock {
-  .sl-block-content {
-    @include ie-only() {
-      cursor: not-allowed;
-    }
-  }
+//ie-only supports IE11 and MS Edge.
+//IE10 and older MS browsers don't know pointer-events, so this selector won't work for them.
+@include ie-only(".sl-can-edit .ftw-htmlblock-htmlblock.has-iframe .sl-block-content") {
+  cursor:  not-allowed;
+}
 
-  iframe {
-    @include ie-only() {
-      pointer-events: none;
-    }
-  }
+@include ie-only(".sl-can-edit .ftw-htmlblock-htmlblock iframe") {
+  pointer-events: none;
 }
