@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts">
+
+    <javascript
+        id="++resource++ftw.htmlblock/iframe_check.js"
+        enabled="True"
+        authenticated="True"
+        />
+
+</object>
