@@ -5,7 +5,8 @@ Changelog
 1.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add suport for iframe tags on MS Edge
+  [raphael-s] 
 
 
 1.0.1 (2016-05-24)
